--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,6 +14,9 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 40px;
+    position: fixed;
+    top: 0;
+    right: 0;
 }
 h1{
     font-family: 'Roboto';
